# hindsight-ai

./: .env.example  .gitignore  BETA_ACCESS_PLAN.md  CI_CD_PLAN.md  DATA_GOVERNANCE_PLAN.md  NOTIFICATION-PLAN.md  NOTIFICATION_SYSTEM_PROGRESS.md  PAT_REVISION_PLAN.md  README.md  REFACTORING_PLAN.md  SEARCH-IMPLEMENTATION-PLAN.md  TASK_PLAN.md  TEST-COVERAGE-PLAN.md  TOKEN_IMPLEMENTATION_PLAN.md  TOKEN_UI_PROPOSAL.md  check_env.sh  codecov.yml  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  restart_frontend_dev.sh  start_hindsight.sh  stop_hindsight.sh
apps/hindsight-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  ROLE_PERMISSIONS_README.md  SECURITY.md  TESTING.md  alembic.ini  app.py  cleanup_keywords.py  debug_memberships.py  docker-entrypoint.sh  main.py  pyproject.toml  run_tests.sh  test_email_notifications.py  test_external_email.py  test_live_email.py  test_notification_flow.py  test_role_permissions.py  test_transactional_email.py  update_member_permissions.py
apps/hindsight-service/core/: async_bulk_operations.py  audit.py  bulk_operations_worker.py
apps/hindsight-service/core/api/: agents.py  audits.py  auth.py  beta_access.py  bulk_operations.py  compression.py  consolidation.py  context_types.py  deps.py  dev_mode_setup.py  keywords.py  main.py  memory_blocks.py  memory_blocks_bulk.py  memory_optimization.py  notifications.py  optimization.py  orgs.py  orgs_backup.py  orgs_fixed.py  permissions.py  pruning.py  search.py  support.py  test_fixtures.py  user_info.py  users.py
apps/hindsight-service/core/core/: __init__.py  consolidation_worker.py  keyword_extraction.py
apps/hindsight-service/core/db/: crud.py  database.py  models.py  schemas.py  scope_utils.py  sqlite_compiler_shims.py  types.py
apps/hindsight-service/core/pruning/: __init__.py  compression_service.py  pruning_service.py
apps/hindsight-service/core/search/: __init__.py  evaluation.py  search_service.py
apps/hindsight-service/core/services/: __init__.py  beta_access_service.py  email_service.py  embedding_service.py  keyword_extraction_service.py  notification_service.py  query_expansion.py  search_service.py  transactional_email_service.py
apps/hindsight-service/core/utils/: feature_flags.py  keywords.py  role_permissions.py  runtime.py  scopes.py  token_crypto.py  urls.py
apps/hindsight-service/core/workers/: __init__.py  async_bulk_operations.py  consolidation_worker.py
apps/hindsight-service/docs/: DATABASE_BACKUP.md
apps/hindsight-service/docs/consolidation_feature/: ConsolidationProcess.md
apps/hindsight-service/migrations/: README.md  env.py
apps/hindsight-service/migrations/versions/: 14cd01c502f8_rename_memory_id_to_id_in_memory_blocks_.py  20240915_backfill_scope_fields.py  20240915_merge_heads.py  20240915_rls_policies.py  20240915_scope_check_constraints.py  20240915_scope_constraints_indexes.py  20250916_convert_organization_invitation_event_type.py  2026042900_users_external_subject_unique.py  (+21 more)
apps/hindsight-service/scripts/: backfill_embeddings.py  rebind_user_subject.py  run_query_expansion_evaluation.py  scope_audit.py
apps/hindsight-service/tests/: README.md  __init__.py  conftest.py  test_dummy.py  test_pruning_service.py  test_token_crypto.py
(+635 files in other folders)
