[project]
name = "hindsight-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "alembic>=1.13.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "google-genai>=1.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core"]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests requiring external services",
    "unit: fast unit tests for isolated components",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.3.0",
]
